[build] replace kts with groovy